<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ghost_white"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".views.authentifiction.fragments.SignInFragment">


    <LinearLayout
        android:id="@+id/hole_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/bg_grey_bottom_rounded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/connexion"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/top_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/top_desc"
                android:textColor="@color/grey"
                android:textSize="17sp" />


            <LinearLayout
                android:id="@+id/et_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/login_et"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_grey_bordered_et"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/login"
                    android:imeOptions="actionDone"
                    android:overScrollMode="always"
                    android:padding="10dp"
                    android:scrollbarStyle="insideInset"
                    android:singleLine="true"
                    android:textColorHint="@color/gainsboro"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/pwd"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/gainsboro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pwd_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_grey_bordered_et"
                        android:ellipsize="start"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/pwd"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:overScrollMode="always"
                        android:padding="10dp"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:singleLine="true"
                        android:textColorHint="@color/gainsboro"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/signin_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_pink_rounded_bordered_btn"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/connecter_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/pink"
                    android:textSize="18sp" />


                <LinearLayout
                    android:id="@+id/connexion_tv_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/connexion_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/connecter"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/signup_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginLeft="3dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/sinscrire"
                        android:textColor="@color/pink"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</ScrollView>